...
      builder: (context) {
        return AlertDialog(
          title: const Text('Create User'),
          content: const Text('User not found. Do you want to create a new user?'),
          actions: [
            TextButton(
              key: const ValueKey('btn_register'),
              onPressed: () {
                _createUser();
                Navigator.of(context).pop();
              },
              child: const Text('Yes'),
            ),
...
              controller: _passwordController,
              decoration: const InputDecoration(labelText: 'Password'),
              obscureText: true,
            ),
            const SizedBox(height: 20),
            ElevatedButton(
              key: const ValueKey('btn_login'),
              onPressed: _login,
              child: const Text('Login'),
            ),
          ],
        ),
      ),
...
